--- a/tests/.env.test
+++ b/tests/.env.test
@@ -1,4 +1,4 @@
-DATABASE_URL="postgresql://user:password@localhost:5432/eticket_test"
+DATABASE_URL="postgresql://user:password@localhost:5432/test_e_ticket"
 JWT_ACCESS_SECRET="test_access_secret"
 JWT_REFRESH_SECRET="test_refresh_secret"
 JWT_ACCESS_EXPIRES_IN=15m
