--- a/package.json
+++ b/package.json
@@ -5,20 +5,31 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "cross-env NODE_ENV=test jest --detectOpenHandles",
+    "test": "cross-env NODE_ENV=test jest --coverage",
     "test:watch": "cross-env NODE_ENV=test jest --watch",
     "test:coverage": "cross-env NODE_ENV=test jest --coverage",
+    "test:ci": "cross-env NODE_ENV=test jest --coverage --ci",
     "start": "node index.js",
-    "dev": "nodemon index.js"
+    "dev": "nodemon index.js",
+    "test:clean": "cross-env NODE_ENV=test && npm run db:reset && npm test",
+    "lint": "eslint . --fix",
+    "migrate:test": "prisma migrate dev --name init --schema ./prisma/schema.prisma"
   },
   "author": "Ashish Barmaiya",
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.26.0",
+    "@babel/plugin-transform-modules-commonjs": "^7.26.3",
     "@babel/preset-env": "^7.26.0",
+    "@eslint/js": "^9.17.0",
     "babel-jest": "^29.7.0",
+    "bcryptjs": "^2.4.3",
     "cross-env": "^7.0.3",
+    "eslint": "^9.17.0",
+    "eslint-plugin-jest": "^28.10.0",
+    "globals": "^15.14.0",
     "jest": "^29.7.0",
+    "mockingoose": "^2.16.2",
     "nodemon": "^3.1.7",
     "prettier": "^3.3.3",
     "prisma": "^5.21.1",
