--- a/.env.test
+++ b/.env.test
@@ -22,3 +22,5 @@ CLOUDINARY_API_KEY="517848631923571"
 CLOUDINARY_API_SECRET="Ibre1_bwRSQ32su4gMZtOHtai34"
 
 TEST_DATABASE_URL="postgresql://postgres:postgres1234@localhost:5000/test_e_ticket?schema=public"
+
+NODE_ENV=test
