--- a/package.json
+++ b/package.json
@@ -32,17 +32,19 @@
     "mockingoose": "^2.16.2",
     "nodemon": "^3.1.7",
     "prettier": "^3.3.3",
-    "prisma": "^6.1.0",
+    "prisma": "^6.2.1",
     "supertest": "^7.0.0"
   },
   "dependencies": {
-    "@prisma/client": "^6.1.0",
+    "@prisma/client": "^6.2.1",
+    "axios": "^1.7.9",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.3",
     "cloudinary": "^2.5.1",
     "connect-pg-simple": "^10.0.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
     "express": "^4.21.0",
@@ -50,8 +52,14 @@
     "express-validator": "^7.2.0",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
+    "node-forge": "^1.3.1",
+    "nodemailer": "^6.9.16",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
-    "pg": "^8.13.0"
+    "pg": "^8.13.0",
+    "redis": "^4.7.0",
+    "xml-crypto": "^6.0.0",
+    "xml2js": "^0.6.2",
+    "xmldom": "^0.6.0"
   }
 }
