--- a/backend/package.json
+++ b/backend/package.json
@@ -56,7 +56,9 @@
     "nodemailer": "^6.9.16",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
+    "pdfkit": "^0.16.0",
     "pg": "^8.13.0",
+    "qrcode": "^1.5.4",
     "redis": "^4.7.0",
     "xml-crypto": "^6.0.0",
     "xml2js": "^0.6.2",
